standalone training code minor fix

--- a/bin/test_flash_attention.ipynb
+++ b/bin/test_flash_attention.ipynb
@@ -20,6 +20,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "from torch.optim.lr_scheduler import _LRScheduler"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "outputs": [
     {
@@ -72,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -80,7 +94,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "786a89f5a1714fad8530e35456886131"
+       "model_id": "0d25f7d8c2974cf4bb59aab57efad7a2"
       }
      },
      "metadata": {},
@@ -92,7 +106,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "22fad5b9682b4bfcae2b34f7e85fa1c8"
+       "model_id": "ea840d728cef4190b1e31d47c9ee8645"
       }
      },
      "metadata": {},
@@ -1645,6 +1659,41 @@
    "source": [
     "import numpy as np\n",
     "np.shape(batch['attention_mask'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    " def __getitem__(self, idx):\n",
+    "        #batch_idx = self.batch_indices[idx]\n",
+    "        # Directly retrieve the batch using the index\n",
+    "        print(idx, type(idx))\n",
+    "        print(len(self.dataset_dict['attention_mask']))\n",
+    "        #print(self.dataset_dict['attention_mask'])\n",
+    "        print(np.shape(self.dataset_dict['attention_mask'][idx]))\n",
+    "        if torch.distributed.is_initialized():\n",
+    "            if torch.distributed.get_rank() == 0:\n",
+    "                print(f\"Process 0 is fetching index: {idx}\")\n",
+    "            elif torch.distributed.get_rank() == 1:\n",
+    "                print(f\"Process 1 is fetching index: {idx}\")\n",
+    "        \"\"\"returns [seq_number, token_length], return one batch at a time\"\"\"\n",
+    "        attention_mask = torch.tensor(self.dataset_dict['attention_mask'][idx])\n",
+    "        input_ids = torch.tensor(self.dataset_dict['input_ids'][idx])\n",
+    "        label = torch.tensor(self.dataset_dict['labels'][idx])\n",
+    "\n",
+    "        return {\n",
+    "            'attention_mask': attention_mask,\n",
+    "            'input_ids': input_ids,\n",
+    "            'labels': label\n",
+    "        }"
    ],
    "metadata": {
     "collapsed": false,
