--- a/notebooks/tokenizer.ipynb
+++ b/notebooks/tokenizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "'4.33.1'"
+      "text/plain": "'4.34.1'"
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from tokenizers import Tokenizer\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# initialize config for the model\n",
@@ -115,7 +115,8 @@
     "                      vocab_size = 50257),\n",
     "    '7b': LlamaConfig(max_position_embeddings=512,\n",
     "                      hidden_size = 640,\n",
-    "                      intermediate_size = 1720)}"
+    "                      intermediate_size = 1720,\n",
+    "                      _flash_attn_2_enabled=True)}"
    ],
    "metadata": {
     "collapsed": false,
@@ -126,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'protllama2': LlamaConfig {\n   \"bos_token_id\": 0,\n   \"eos_token_id\": 0,\n   \"hidden_act\": \"silu\",\n   \"hidden_size\": 1280,\n   \"initializer_range\": 0.02,\n   \"intermediate_size\": 3440,\n   \"max_position_embeddings\": 1024,\n   \"model_type\": \"llama\",\n   \"num_attention_heads\": 32,\n   \"num_hidden_layers\": 32,\n   \"num_key_value_heads\": 32,\n   \"pretraining_tp\": 1,\n   \"rms_norm_eps\": 1e-06,\n   \"rope_scaling\": null,\n   \"rope_theta\": 10000.0,\n   \"tie_word_embeddings\": false,\n   \"transformers_version\": \"4.33.1\",\n   \"use_cache\": true,\n   \"vocab_size\": 50257\n },\n '7b': LlamaConfig {\n   \"bos_token_id\": 1,\n   \"eos_token_id\": 2,\n   \"hidden_act\": \"silu\",\n   \"hidden_size\": 640,\n   \"initializer_range\": 0.02,\n   \"intermediate_size\": 1720,\n   \"max_position_embeddings\": 512,\n   \"model_type\": \"llama\",\n   \"num_attention_heads\": 32,\n   \"num_hidden_layers\": 32,\n   \"num_key_value_heads\": 32,\n   \"pretraining_tp\": 1,\n   \"rms_norm_eps\": 1e-06,\n   \"rope_scaling\": null,\n   \"rope_theta\": 10000.0,\n   \"tie_word_embeddings\": false,\n   \"transformers_version\": \"4.33.1\",\n   \"use_cache\": true,\n   \"vocab_size\": 32000\n }}"
+      "text/plain": "{'protllama2': LlamaConfig {\n   \"attention_bias\": false,\n   \"bos_token_id\": 0,\n   \"eos_token_id\": 0,\n   \"hidden_act\": \"silu\",\n   \"hidden_size\": 1280,\n   \"initializer_range\": 0.02,\n   \"intermediate_size\": 3440,\n   \"max_position_embeddings\": 1024,\n   \"model_type\": \"llama\",\n   \"num_attention_heads\": 32,\n   \"num_hidden_layers\": 32,\n   \"num_key_value_heads\": 32,\n   \"pretraining_tp\": 1,\n   \"rms_norm_eps\": 1e-06,\n   \"rope_scaling\": null,\n   \"rope_theta\": 10000.0,\n   \"tie_word_embeddings\": false,\n   \"transformers_version\": \"4.34.1\",\n   \"use_cache\": true,\n   \"vocab_size\": 50257\n },\n '7b': LlamaConfig {\n   \"attention_bias\": false,\n   \"bos_token_id\": 1,\n   \"eos_token_id\": 2,\n   \"hidden_act\": \"silu\",\n   \"hidden_size\": 640,\n   \"initializer_range\": 0.02,\n   \"intermediate_size\": 1720,\n   \"max_position_embeddings\": 512,\n   \"model_type\": \"llama\",\n   \"num_attention_heads\": 32,\n   \"num_hidden_layers\": 32,\n   \"num_key_value_heads\": 32,\n   \"pretraining_tp\": 1,\n   \"rms_norm_eps\": 1e-06,\n   \"rope_scaling\": null,\n   \"rope_theta\": 10000.0,\n   \"tie_word_embeddings\": false,\n   \"transformers_version\": \"4.34.1\",\n   \"use_cache\": true,\n   \"vocab_size\": 32000\n }}"
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +150,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (397744783.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;36m  Input \u001B[0;32mIn [14]\u001B[0;36m\u001B[0m\n\u001B[0;31m    if not getattr(MODEL_CONFIGS['7b'], '_flash_attn_2_enabled', False)\u001B[0m\n\u001B[0m                                                                       ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not getattr(MODEL_CONFIGS['7b'], '_flash_attn_2_enabled', False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "from flash_attn import flash_attn_func, flash_attn_varlen_func\n",
+    "from flash_attn.bert_padding import index_first_axis, pad_input, unpad_input  # noqa\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not getattr(MODEL_CONFIGS['7b'], \"_flash_attn_2_enabled\", False):\n",
+    "    # This block is executed if _flash_attn_2_enabled attribute is either missing or set to a falsy value\n",
+    "    print('yes')\n",
+    "else:\n",
+    "    # This block is executed if _flash_attn_2_enabled attribute is set to a truthy value\n",
+    "    print('wrong')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-19 20:38:52.304255: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LlamaConfig {\n",
+      "  \"attention_bias\": false,\n",
+      "  \"bos_token_id\": 1,\n",
+      "  \"eos_token_id\": 2,\n",
+      "  \"hidden_act\": \"silu\",\n",
+      "  \"hidden_size\": 640,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 1720,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"llama\",\n",
+      "  \"num_attention_heads\": 32,\n",
+      "  \"num_hidden_layers\": 32,\n",
+      "  \"num_key_value_heads\": 32,\n",
+      "  \"pretraining_tp\": 1,\n",
+      "  \"rms_norm_eps\": 1e-06,\n",
+      "  \"rope_scaling\": null,\n",
+      "  \"rope_theta\": 10000.0,\n",
+      "  \"tie_word_embeddings\": false,\n",
+      "  \"transformers_version\": \"4.34.1\",\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 32000\n",
+      "}\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "LlamaForCausalLM(\n  (model): LlamaModel(\n    (embed_tokens): Embedding(32000, 640)\n    (layers): ModuleList(\n      (0-31): 32 x LlamaDecoderLayer(\n        (self_attn): LlamaFlashAttention2(\n          (q_proj): Linear(in_features=640, out_features=640, bias=False)\n          (k_proj): Linear(in_features=640, out_features=640, bias=False)\n          (v_proj): Linear(in_features=640, out_features=640, bias=False)\n          (o_proj): Linear(in_features=640, out_features=640, bias=False)\n          (rotary_emb): LlamaRotaryEmbedding()\n        )\n        (mlp): LlamaMLP(\n          (gate_proj): Linear(in_features=640, out_features=1720, bias=False)\n          (up_proj): Linear(in_features=640, out_features=1720, bias=False)\n          (down_proj): Linear(in_features=1720, out_features=640, bias=False)\n          (act_fn): SiLUActivation()\n        )\n        (input_layernorm): LlamaRMSNorm()\n        (post_attention_layernorm): LlamaRMSNorm()\n      )\n    )\n    (norm): LlamaRMSNorm()\n  )\n  (lm_head): Linear(in_features=640, out_features=32000, bias=False)\n)"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers.models.llama.modeling_llama import LlamaForCausalLM\n",
+    "import flash_attn\n",
+    "model = LlamaForCausalLM(MODEL_CONFIGS['7b'])\n",
+    "print(model.config)  # If this attribute exists and is True, flash_attn is likely being used.\n",
+    "model"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using flash_attn in one of the decoder layers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LlamaForCausalLM(MODEL_CONFIGS['7b'])\n",
+    "for layer in model.model.layers:\n",
+    "    if 'LlamaFlashAttention2' in str(type(layer.self_attn)):\n",
+    "        print(\"Using flash_attn in one of the decoder layers.\")\n",
+    "        break\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "if is_flash_attn_2_available():\n",
+    "    from flash_attn import flash_attn_func, flash_attn_varlen_func\n",
+    "    from flash_attn.bert_padding import index_first_axis, pad_input, unpad_input  # noqa\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LlamaFlashAttention2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [7]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m model \u001B[38;5;241m=\u001B[39m LlamaForCausalLM(MODEL_CONFIGS[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m7b\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m layer \u001B[38;5;129;01min\u001B[39;00m model\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39mlayers:\n\u001B[0;32m----> 3\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(layer\u001B[38;5;241m.\u001B[39mself_attn, \u001B[43mLlamaFlashAttention2\u001B[49m):\n\u001B[1;32m      4\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUsing flash_attn in one of the decoder layers.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      5\u001B[0m         \u001B[38;5;28;01mbreak\u001B[39;00m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'LlamaFlashAttention2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "model = LlamaForCausalLM(MODEL_CONFIGS['7b'])\n",
+    "for layer in model.model.layers:\n",
+    "    if isinstance(layer.self_attn, LlamaFlashAttention2):\n",
+    "        print(\"Using flash_attn in one of the decoder layers.\")\n",
+    "        break\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
@@ -164,13 +366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "DatasetDict({\n    train: Dataset({\n        features: ['text', 'meta'],\n        num_rows: 930514\n    })\n})"
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
