Revert "standalone training code minor fix"
This reverts commit eb114f876f7af2d4820db3ba4b2c8e00c2df7bb0.

--- a/bin/test_training.ipynb
+++ b/bin/test_training.ipynb
@@ -1655,6 +1655,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    " def __getitem__(self, idx):\n",
+    "        #batch_idx = self.batch_indices[idx]\n",
+    "        # Directly retrieve the batch using the index\n",
+    "        print(idx, type(idx))\n",
+    "        print(len(self.dataset_dict['attention_mask']))\n",
+    "        #print(self.dataset_dict['attention_mask'])\n",
+    "        print(np.shape(self.dataset_dict['attention_mask'][idx]))\n",
+    "        if torch.distributed.is_initialized():\n",
+    "            if torch.distributed.get_rank() == 0:\n",
+    "                print(f\"Process 0 is fetching index: {idx}\")\n",
+    "            elif torch.distributed.get_rank() == 1:\n",
+    "                print(f\"Process 1 is fetching index: {idx}\")\n",
+    "        \"\"\"returns [seq_number, token_length], return one batch at a time\"\"\"\n",
+    "        attention_mask = torch.tensor(self.dataset_dict['attention_mask'][idx])\n",
+    "        input_ids = torch.tensor(self.dataset_dict['input_ids'][idx])\n",
+    "        label = torch.tensor(self.dataset_dict['labels'][idx])\n",
+    "\n",
+    "        return {\n",
+    "            'attention_mask': attention_mask,\n",
+    "            'input_ids': input_ids,\n",
+    "            'labels': label\n",
+    "        }"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "outputs": [
     {
