generation modified, tensor version

--- a/bin/inference_2.ipynb
+++ b/bin/inference_2.ipynb
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "outputs": [
     {
      "name": "stdout",
@@ -1049,9 +1049,9 @@
     },
     {
      "data": {
-      "text/plain": "tensor([[1, 2, 3],\n        [4, 5, 6],\n        [7, 8, 9]])"
+      "text/plain": "tensor([[1., 1., -inf],\n        [-inf, 5., 5.],\n        [7., 8., 9.]])"
      },
-     "execution_count": 16,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1059,7 @@
    "source": [
     "import torch\n",
     "import numpy as np\n",
-    "logits_for_every_tok = torch.tensor(np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]]))\n",
+    "logits_for_every_tok = torch.tensor(np.array([[1, 1, float('-inf')], [float('-inf'), 5, 5], [7, 8, 9]]),  dtype=torch.float32)\n",
     "print(logits_for_every_tok.size())\n",
     "logits_for_every_tok"
    ],
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "outputs": [
     {
      "name": "stdout",
@@ -1083,15 +1083,15 @@
     },
     {
      "data": {
-      "text/plain": "tensor([1, 5, 7])"
+      "text/plain": "tensor([1., 5., 7.])"
      },
-     "execution_count": 20,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "specific_logits = torch.tensor((1, 5, 7))\n",
+    "specific_logits = torch.tensor((1., 5., 7.),  dtype=torch.float32)\n",
     "specific_logits = specific_logits.squeeze(0)\n",
     "print(specific_logits.size())\n",
     "specific_logits"
@@ -1105,13 +1105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[1, 4, 7],\n        [2, 5, 8],\n        [3, 6, 9]])"
+      "text/plain": "tensor([[1., -inf, 7.],\n        [1., 5., 8.],\n        [-inf, 5., 9.]])"
      },
-     "execution_count": 21,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,13 +1129,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[ True, False,  True],\n        [False,  True, False],\n        [False, False, False]])"
+      "text/plain": "torch.Size([3, 3])"
      },
-     "execution_count": 22,
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits_for_every_tok_transposed.size()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[ True, False,  True],\n        [ True,  True, False],\n        [False,  True, False]])"
+     },
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,20 +1175,573 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 105,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[0, 0],\n        [0, 2],\n        [1, 1]])"
+      "text/plain": "tensor([[ True, False,  True],\n        [ True,  True, False],\n        [False,  True, False]])"
      },
-     "execution_count": 23,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "close_indices = (torch.isclose(logits_for_every_tok_transposed, specific_logits, rtol=1e-5)).nonzero()\n",
-    "close_indices"
+    "close_mask = torch.isclose(logits_for_every_tok_transposed, specific_logits, rtol=1e-5)\n",
+    "close_mask"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0, 0],\n        [0, 2],\n        [1, 0],\n        [1, 1],\n        [2, 1]])"
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nonzero_indices = torch.nonzero(close_mask, as_tuple=False)\n",
+    "nonzero_indices"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0, 0],\n        [0, 2],\n        [1, 0],\n        [1, 1],\n        [2, 1]])"
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_indices = nonzero_indices[nonzero_indices[:, 0].argsort()]\n",
+    "sorted_indices"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([1, 2, 0])"
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_indices = torch.unique(sorted_indices[:, 1], sorted=False)\n",
+    "unique_indices"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0, 2]])"
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_indices[sorted_indices[:, 1] == 2]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 1])\n",
+      "tensor([0, 2])\n",
+      "tensor([0, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in unique_indices:\n",
+    "    print(sorted_indices[sorted_indices[:, 1] == i][0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[1, 1],\n        [0, 2],\n        [0, 0]])"
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the indices of non-zero elements along axis 0\n",
+    "nonzero_indices = torch.nonzero(close_mask, as_tuple=False)\n",
+    "\n",
+    "# Sort the indices based on the first element (axis 0)\n",
+    "sorted_indices = nonzero_indices[nonzero_indices[:, 0].argsort()]\n",
+    "\n",
+    "# Get the unique indices along axis 1\n",
+    "unique_indices = torch.unique(sorted_indices[:, 1], sorted=False)\n",
+    "\n",
+    "# Extract the corresponding indices along axis 0\n",
+    "filtered_close_indices = torch.stack([sorted_indices[sorted_indices[:, 1] == i][0] for i in unique_indices])\n",
+    "filtered_close_indices"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[1, 0, 1],\n        [2, 1, 1],\n        [2, 2, 1]])"
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use torch.cumsum to get cumulative sum along rows\n",
+    "cumulative_sum = torch.cumsum(close_mask, dim=0)\n",
+    "cumulative_sum"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([ 0,  1, -1])"
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_occurrence_index = torch.argmax(cumulative_sum, dim=0) - 1\n",
+    "first_occurrence_index"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0, 0],\n        [1, 1],\n        [0, 2]])"
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_close_indices = []\n",
+    "\n",
+    "for i in range(close_mask.size(1)):\n",
+    "    indices = torch.nonzero(close_mask[:, i], as_tuple=False)\n",
+    "    if indices.numel() > 0:\n",
+    "        first_occurrence_index = indices[0, 0].item()\n",
+    "        filtered_close_indices.append([first_occurrence_index, i])\n",
+    "\n",
+    "filtered_close_indices = torch.tensor(filtered_close_indices)\n",
+    "filtered_close_indices"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "close_indices[0][0].item()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "close_indices[0][1].item()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(1.)"
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits_for_every_tok_transposed[0, 0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[2.7183e+00,        nan, 1.0966e+03],\n        [2.7183e+00, 1.4841e+02, 2.9810e+03],\n        [       nan, 1.4841e+02, 8.1031e+03]])"
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = (logits_for_every_tok_transposed != -float('inf'))\n",
+    "tensor_exp = torch.exp(logits_for_every_tok_transposed * mask)\n",
+    "tensor_exp"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[2.7183e+00, 0.0000e+00, 1.0966e+03],\n        [2.7183e+00, 1.4841e+02, 2.9810e+03],\n        [0.0000e+00, 1.4841e+02, 8.1031e+03]])"
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.nan_to_num(tensor_exp, nan=0.0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([2.7183, 7.3891,    nan])"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_exp[:, 0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([2.7183, 2.7183, 0.0000])"
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_without_nan = torch.nan_to_num(tensor_exp[:, 0], nan=0.0)\n",
+    "tensor_without_nan"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(5.4366)"
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(tensor_without_nan)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(2.7183)"
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(logits_for_every_tok_transposed[close_indices[0][0].item(), close_indices[0][1].item()])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09003057299782118\n",
+      "1.8083123363768574\n",
+      "0.012184312411552113\n",
+      "-6.222817989476241\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_prob = 0.0\n",
+    "for i in range(logits_for_every_tok_transposed.size(1)):\n",
+    "    softmax_numerator = np.exp(logits_for_every_tok_transposed[close_indices[i][0].item(), close_indices[i][1].item()])\n",
+    "    softmax_denominator = torch.sum(tensor_exp[:, i])\n",
+    "    probability = softmax_numerator / softmax_denominator\n",
+    "    log_prob += np.log(probability.item())\n",
+    "    print(probability.item())\n",
+    "print(log_prob)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([   30.1929,   606.4401, 12180.6758])"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.exp(logits_for_every_tok_transposed).sum(dim=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([ 6, 15, 24])"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = (logits_for_every_tok_transposed != -float('inf'))\n",
+    "\n",
+    "# Apply the mask and calculate the sum along axis 1\n",
+    "sum_along_axis1 = torch.sum(logits_for_every_tok_transposed * mask, dim=0)\n",
+    "sum_along_axis1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Tensor' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [18]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m logits_for_every_tok_transposed[\u001B[43mclose_indices\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mitems\u001B[49m()]\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Tensor' object has no attribute 'items'"
+     ]
+    }
+   ],
+   "source": [
+    "logits_for_every_tok_transposed[close_indices[0].items()]"
    ],
    "metadata": {
     "collapsed": false,
